bk_ida/gccida/g0/reload_as_needed
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_as_needed/src/reload1.c:4307:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
oldpat = ( rtx)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_as_needed/src/reload1.c:4311:63: error: use of undeclared identifier 'machine_mode'
*( _QWORD *)( v1 + 8) = eliminate_regs( *( rtx *)( v1 + 8), ( machine_mode)*( unsigned __int8 *)( v1 + 2), 0LL); 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_as_needed/src/reload1.c:4328:45: error: subscripted value is not an array, pointer, or vector
find_reloads( insn, 1, spill_indirect_levels[0], live_known, spill_reg_order); 
                       ~~~~~~~~~~~~~~~~~~~~~^~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_as_needed/src/reload1.c:4337:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
prev = ( rtx)insn[1]; 
             ^~~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_as_needed/src/obj/reload1.o] Error 1
